feat: добавлен Put метод для подгрузки csv файла
#INTERNSHIP-51
